--- a/1_Fetching_the_data_eda.ipynb
+++ b/1_Fetching_the_data_eda.ipynb
@@ -42,13 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import psycopg2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,32 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(datetime.date(2014, 10, 13), 221900.0, 7129300520, 1),\n",
-       " (datetime.date(2014, 12, 9), 538000.0, 6414100192, 2),\n",
-       " (datetime.date(2015, 2, 25), 180000.0, 5631500400, 3),\n",
-       " (datetime.date(2014, 12, 9), 604000.0, 2487200875, 4),\n",
-       " (datetime.date(2015, 2, 18), 510000.0, 1954400510, 5),\n",
-       " (datetime.date(2014, 5, 12), 1230000.0, 7237550310, 6),\n",
-       " (datetime.date(2014, 6, 27), 257500.0, 1321400060, 7),\n",
-       " (datetime.date(2015, 1, 15), 291850.0, 2008000270, 8),\n",
-       " (datetime.date(2015, 4, 15), 229500.0, 2414600126, 9),\n",
-       " (datetime.date(2015, 3, 12), 323000.0, 3793500160, 10)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cur.execute('SELECT * FROM eda.king_county_house_sales LIMIT 10')\n",
-    "cur.fetchall()"
+    "cur.execute('SELECT * FROM eda.king_county_house_sales')\n",
+    "cur.fetchall()\n"
    ]
   },
   {
@@ -178,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,18 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\AppData\\Local\\Temp\\ipykernel_24608\\613597934.py:3: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df_psycopg = pd.read_sql(query_string, conn)\n"
+     ]
+    }
+   ],
    "source": [
     "# import the data into a pandas dataframe\n",
-    "query_string = \"SELECT * FROM eda.king_county_house_sales LIMIT 10\"\n",
+    "query_string = \"SELECT * FROM eda.king_county_house_details\"\n",
     "df_psycopg = pd.read_sql(query_string, conn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -258,62 +254,166 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>price</th>\n",
-       "      <th>house_id</th>\n",
        "      <th>id</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2014-10-13</td>\n",
-       "      <td>221900.0</td>\n",
-       "      <td>7129300520</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1000102</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>9373.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98002</td>\n",
+       "      <td>47.3262</td>\n",
+       "      <td>-122.214</td>\n",
+       "      <td>2060.0</td>\n",
+       "      <td>7316.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2014-12-09</td>\n",
-       "      <td>538000.0</td>\n",
-       "      <td>6414100192</td>\n",
-       "      <td>2</td>\n",
+       "      <td>100100050</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1320.0</td>\n",
+       "      <td>11090.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1320.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98155</td>\n",
+       "      <td>47.7748</td>\n",
+       "      <td>-122.304</td>\n",
+       "      <td>1320.0</td>\n",
+       "      <td>8319.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-02-25</td>\n",
-       "      <td>180000.0</td>\n",
-       "      <td>5631500400</td>\n",
+       "      <td>1001200035</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1350.0</td>\n",
+       "      <td>7973.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1350.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98188</td>\n",
+       "      <td>47.4323</td>\n",
+       "      <td>-122.292</td>\n",
+       "      <td>1310.0</td>\n",
+       "      <td>7491.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2014-12-09</td>\n",
-       "      <td>604000.0</td>\n",
-       "      <td>2487200875</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1001200050</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>7248.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1260.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98188</td>\n",
+       "      <td>47.4330</td>\n",
+       "      <td>-122.292</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>7732.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>510000.0</td>\n",
-       "      <td>1954400510</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1003000175</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>980.0</td>\n",
+       "      <td>7606.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>980.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98188</td>\n",
+       "      <td>47.4356</td>\n",
+       "      <td>-122.290</td>\n",
+       "      <td>980.0</td>\n",
+       "      <td>8125.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date     price    house_id  id\n",
-       "0  2014-10-13  221900.0  7129300520   1\n",
-       "1  2014-12-09  538000.0  6414100192   2\n",
-       "2  2015-02-25  180000.0  5631500400   3\n",
-       "3  2014-12-09  604000.0  2487200875   4\n",
-       "4  2015-02-18  510000.0  1954400510   5"
+       "           id  bedrooms  bathrooms  sqft_living  sqft_lot  floors  waterfront   \n",
+       "0     1000102       6.0        3.0       2400.0    9373.0     2.0         NaN  \\\n",
+       "1   100100050       3.0        1.0       1320.0   11090.0     1.0         0.0   \n",
+       "2  1001200035       3.0        1.0       1350.0    7973.0     1.5         NaN   \n",
+       "3  1001200050       4.0        1.5       1260.0    7248.0     1.5         NaN   \n",
+       "4  1003000175       3.0        1.0        980.0    7606.0     1.0         0.0   \n",
+       "\n",
+       "   view  condition  grade  sqft_above  sqft_basement  yr_built  yr_renovated   \n",
+       "0   0.0          3      7      2400.0            0.0      1991           0.0  \\\n",
+       "1   0.0          3      7      1320.0            0.0      1955           0.0   \n",
+       "2   0.0          3      7      1350.0            0.0      1954           0.0   \n",
+       "3   0.0          5      7      1260.0            0.0      1955           NaN   \n",
+       "4   0.0          3      7       980.0            0.0      1954           0.0   \n",
+       "\n",
+       "   zipcode      lat     long  sqft_living15  sqft_lot15  \n",
+       "0    98002  47.3262 -122.214         2060.0      7316.0  \n",
+       "1    98155  47.7748 -122.304         1320.0      8319.0  \n",
+       "2    98188  47.4323 -122.292         1310.0      7491.0  \n",
+       "3    98188  47.4330 -122.292         1300.0      7732.0  \n",
+       "4    98188  47.4356 -122.290          980.0      8125.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,12 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export the data to a csv-file\n",
-    "df_psycopg.to_csv('data/eda.csv',index=False)"
+    "df_psycopg.to_csv('data/king_county_house_details.csv',index=False)"
    ]
   },
   {
@@ -344,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,90 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>price</th>\n",
-       "      <th>house_id</th>\n",
-       "      <th>id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-10-13</td>\n",
-       "      <td>221900.0</td>\n",
-       "      <td>7129300520</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-12-09</td>\n",
-       "      <td>538000.0</td>\n",
-       "      <td>6414100192</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-02-25</td>\n",
-       "      <td>180000.0</td>\n",
-       "      <td>5631500400</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-12-09</td>\n",
-       "      <td>604000.0</td>\n",
-       "      <td>2487200875</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-02-18</td>\n",
-       "      <td>510000.0</td>\n",
-       "      <td>1954400510</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date     price    house_id  id\n",
-       "0  2014-10-13  221900.0  7129300520   1\n",
-       "1  2014-12-09  538000.0  6414100192   2\n",
-       "2  2015-02-25  180000.0  5631500400   3\n",
-       "3  2014-12-09  604000.0  2487200875   4\n",
-       "4  2015-02-18  510000.0  1954400510   5"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sqlalchemy.head()"
    ]
@@ -486,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
